sys/wasapi/gstwasapisrc.h
@@ -46,6 +46,8 @@ struct _GstWasapiSrc
   guint64 client_clock_freq;
   IAudioCaptureClient *capture_client;
   HANDLE event_handle;
+  /* Smooth frames captured from WASAPI, which can be irregular sometimes */
+  GstAdapter *adapter;
   /* Client was reset, so it needs to be started again */
   gboolean client_needs_restart;
 
